[package]
name = "ctp_rs"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.55.1"
cc = { version = "1.0.61", features = ["parallel"] }
lazy_static = "1.4.0"
regex = "1.4.1"

[dev-dependencies]
crossbeam = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
log = "0.4.11"
dotenv = "0.15.0"
env_logger = "0.7.1"
