[package]
name = "ctp_rs"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
cc = { version = "1.2.0", features = ["parallel"] }
lazy_static = "1.5.0"
regex = "1.11.1"
clang = { version = "2.0.0", features = ["runtime"] }

[dev-dependencies]
log = "0.4.11"
dotenv = "0.15.0"
env_logger = "0.7.1"
